--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <div class="resume-item">
               <a href="assets/img/certif_licen/fga_ds1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
+              <a href="assets/img/certif_licen/fga_ds3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
               <h5>October 2022</h5>
               <p><em>Digital Talent Scholarship</em></p>
               <!-- <ul>
@@ -461,7 +462,7 @@
 
         <div class="section-title">
           <h2>Galery</h2>
-          <!-- <p>Certifications</p> -->
+          <p>Certifications & Awards</p>
         </div>
 
         <!-- <div class="row">
@@ -477,6 +478,46 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/python/py-34.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Trial Course</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <a href="pages/trial_course.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/fga_ds1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Digitalent FGA: Data Science</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <a href="pages/fga.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <!-- <a href="assets/img/certif_licen/pupresnas.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/thk/thk-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>THK Future Knowledge</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <a href="pages/thk_gallery.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-py">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/python/py-1.png" class="img-fluid" alt="">
@@ -514,16 +555,16 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>         
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/python/py-34.png" class="img-fluid" alt="">
+              <img src="assets/img/certif_licen/rm-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Trial Course</h4>
+                <h4>Rapid Miner Certifications</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/trial_course.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/rm.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -531,12 +572,41 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-r">
             <div class="portfolio-wrap">
-              <img src="assets/img/thk/thk-1.png" class="img-fluid" alt="">
+              <img src="assets/img/certif_licen/pupresnas.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>THK Future Knowledge</h4>
+                <h4>Gemastik</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/thk_gallery.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <!-- <a href="pages/gemastik.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  <a href="assets/img/certif_licen/pupresnas.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/mos_2013-0.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Microsoft Office</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href="pages/gemastik.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  <a href="assets/img/certif_licen/mos_2013.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/bd-1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>WEB</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href="pages/gemastik.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  <a href="assets/img/certif_licen/bd-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
