--- a/pages/rm.html
+++ b/pages/rm.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Churn Prediction</title>
+    <title>Rapid Miner Certification</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -69,27 +69,14 @@
                 echo '<img src="../assets/img/portfolio/thk/Slide' . $x . '.png" alt="churn prediction" />';
                 echo '</div>';
               }
-
               ?> -->
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-1.png" alt="" />
+                  <img src="../assets/img/certif_licen/rm-1.png" alt="" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-2.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-3.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-4.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-5.png" alt="" />
+                  <img src="../assets/img/certif_licen/rm-2.png" alt="" />
                 </div>
               </div>
               <div class="swiper-pagination"></div>
