--- a/pages/fga.html
+++ b/pages/fga.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Churn Prediction</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>Digitalent Fresh Graduate Academy</title>
+    <meta
+      content="Digitalent Fresh Graduate Academy Data Science Batch 4"
+      name="description"
+    />
+    <meta
+      content="Digitalent Fresh Graduate Academy Data Science Batch 4"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
@@ -69,27 +75,18 @@
                 echo '<img src="../assets/img/portfolio/thk/Slide' . $x . '.png" alt="churn prediction" />';
                 echo '</div>';
               }
-
               ?> -->
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-1.png" alt="" />
+                  <img src="../assets/img/certif_licen/fga_ds1.png" alt="" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-2.png" alt="" />
+                  <img src="../assets/img/certif_licen/fga_ds2.png" alt="" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-3.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-4.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/sql/sql-5.png" alt="" />
+                  <img src="../assets/img/certif_licen/fga_ds3.png" alt="" />
                 </div>
               </div>
               <div class="swiper-pagination"></div>
