--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -6,6 +6,7 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Churn Prediction</title>
