--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
           <div class="col-lg-4">
             <h3 class="resume-title">Licenses & Certifications</h3>
             <div class="resume-item">
-              <a href="assets/img/certif_licen/fga_ds1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <!-- <a href="#fga" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a> -->
+              <a href="#fga"><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
               <a href="assets/img/certif_licen/fga_ds3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
               <h5>October 2022</h5>
@@ -491,7 +492,7 @@
             </div>
           </div>
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+          <div id="fga" class="col-lg-4 col-md-6 portfolio-item filter-r" >
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/fga_ds1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -562,9 +563,33 @@
               <img src="assets/img/certif_licen/rm-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Rapid Miner Certifications</h4>
-                <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <a href="pages/rm.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/minidqlab.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Mini Bootcamp DQLab</h4>
+                <div class="portfolio-links"><a href="assets/img/certif_licen/minidqlab.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-r">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Mini Course Revou</h4>
+                <!-- <p>Web</p> -->
+                <div class="portfolio-links">
+                  <!-- <a href="pages/gemastik.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
+                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -575,7 +600,6 @@
               <img src="assets/img/certif_licen/pupresnas.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gemastik</h4>
-                <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <!-- <a href="pages/gemastik.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
                   <a href="assets/img/certif_licen/pupresnas.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-link"></i></a>
@@ -610,8 +634,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
+          </div>   
                   
           </div>
         </div>
