--- a/pages/trial_course.html
+++ b/pages/trial_course.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Trial Course</title>
+    <title>Pacmann Trial Course</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -73,25 +73,61 @@
               ?> -->
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/certif_licen/python/py-34.png"
+                    src="../assets/img/certif_licen/pacmann/pac-1.png"
                     alt=""
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/certif_licen/python/py-35.png"
+                    src="../assets/img/certif_licen/pacmann/pac-2.png"
                     alt=""
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/certif_licen/python/py-36.png"
+                    src="../assets/img/certif_licen/pacmann/pac-3.png"
                     alt=""
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    src="../assets/img/certif_licen/python/py-37.png"
+                    src="../assets/img/certif_licen/pacmann/pac-4.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-5.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-6.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-7.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-8.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-9.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/certif_licen/pacmann/pac-10.png"
                     alt=""
                   />
                 </div>
