--- a/pages/library.html
+++ b/pages/library.html
@@ -1,3 +1,7 @@
+<!-- <?php
+$a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
+?> -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Rapid Miner Certification</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>Library</title>
+    <meta content="Library Java Application" name="description" />
+    <meta content="Library Java aplikasi application" name="keywords" />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
@@ -62,19 +66,80 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <!-- <?php
-              $a = count(glob("../assets/img/portfolio/thk/*.png", GLOB_BRACE));
-
               for ($x = 1; $x <= $a; $x++) {
                 echo '<div class="swiper-slide">';
-                echo '<img src="../assets/img/portfolio/thk/Slide' . $x . '.png" alt="churn prediction" />';
+                echo '<img src="../assets/img/portfolio/churn-prediction/Slide' . $x . '.png" alt="" />';
                 echo '</div>';
               }
               ?> -->
+
                 <div class="swiper-slide">
-                  <img src="../assets/img/certif_licen/pupresnas.png" alt="" />
+                  <img
+                    src="../assets/img/portfolio/library/slide-1.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-2.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-3.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-4.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-5.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-6.png"
+                    alt=""
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/library/slide-7.png"
+                    alt=""
+                  />
                 </div>
               </div>
               <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-11">
+            <div class="portfolio-info">
+              <h3>Project Information</h3>
+              <ul>
+                <li><strong>Category</strong> : Java Application, Library</li>
+                <li><strong>Project date</strong> :</li>
+                <li>
+                  <strong>Project URL</strong> :
+                  <a href="https://github.com/maulanakavaldo/">Github</a>
+                </li>
+              </ul>
+              <br />
+              <h3>Details</h3>
+              <p>
+                Projek ini dibuat untuk memenuhi tugas mata kuliah pemrograman
+                java.
+              </p>
             </div>
           </div>
         </div>
