--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -9,9 +9,9 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Churn Prediction</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>Churn Prediction Telecom</title>
+    <meta content="Churn Prediction Telecom" name="description" />
+    <meta content="Churn Prediction Telecom Company" name="keywords" />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
