--- a/pages/udemy-course.html
+++ b/pages/udemy-course.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>DQLab Certification Course</title>
-    <meta content="DQLab Certification Course" name="description" />
-    <meta content="DQLab Certification Course" name="keywords" />
+    <title>Udemy Course Certification</title>
+    <meta content="Udemy Course Certification" name="description" />
+    <meta content="Udemy Course Certification" name="keywords" />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
@@ -74,202 +74,94 @@
                   ?> -->
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-1.png"
+                      src="../assets/img/certif_licen/udemy/slide-1.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-2.png"
+                      src="../assets/img/certif_licen/udemy/slide-2.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-3.png"
+                      src="../assets/img/certif_licen/udemy/slide-3.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-4.png"
+                      src="../assets/img/certif_licen/udemy/slide-4.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-5.png"
+                      src="../assets/img/certif_licen/udemy/slide-5.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-6.png"
+                      src="../assets/img/certif_licen/udemy/slide-6.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-7.png"
+                      src="../assets/img/certif_licen/udemy/slide-7.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-8.png"
+                      src="../assets/img/certif_licen/udemy/slide-8.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-9.png"
+                      src="../assets/img/certif_licen/udemy/slide-9.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-10.png"
+                      src="../assets/img/certif_licen/udemy/slide-10.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-11.png"
+                      src="../assets/img/certif_licen/udemy/slide-11.png"
+                      alt=""
+                    />
+                  </div>
+                  <!-- <div class="swiper-slide">
+                    <img
+                      src="../assets/img/certif_licen/udemy/slide-12.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-12.png"
+                      src="../assets/img/certif_licen/udemy/slide-13.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-13.png"
+                      src="../assets/img/certif_licen/udemy/slide-14.png"
                       alt=""
                     />
                   </div>
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/certif_licen/python/py-14.png"
+                      src="../assets/img/certif_licen/udemy/slide-15.png"
                       alt=""
                     />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-15.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-16.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-17.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-18.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-19.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-20.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-21.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-22.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-23.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-24.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-25.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-26.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-27.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-28.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-q9.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-30.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-31.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-32.png"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/certif_licen/python/py-33.png"
-                      alt=""
-                    />
-                  </div>
+                  </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
