--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Churn Prediction</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <title>Final Project Data Science</title>
+    <meta
+      content="Final Project Data Science THK Future Knowledge"
+      name="description"
+    />
+    <meta
+      content="Final Project Data Science THK Future Knowledge"
+      name="keywords"
+    />
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
