--- a/index.html
+++ b/index.html
@@ -722,10 +722,16 @@
                 <p><a href="mailto:alkav.maulana@gmail.com">alkav.maulana@gmail.com</a></p>
               </div>
 
-              <div class="phone">
+              <!-- <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>+62 81393363478</p>
+              </div> -->
+
+              <div class="phone">
+                <i class="bx bxl-whatsapp"></i>
+                <h4>Scan me:</h4>
+                <p><img src="assets/img/barcode.png" height="120px" width="120px" alt="barcode whatsapp"></p>                
               </div>
             </div>
           </div>
@@ -740,7 +746,7 @@
                 </div>
                 <br>
                 <!-- <div class="g-recaptcha" data-sitekey="6LdOWkYjAAAAANLK2A8kK6Ph8RTWGril1hCAxy0g"></div> -->
-                <br>
+                <br><br>
                 <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
               </form>
           </div>
@@ -761,11 +767,11 @@
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-
         <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>        
       </div>
+      
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
