--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
               <li data-filter=".filter-ml">ML</li>
               <li data-filter=".filter-web">Web</li>
               <li data-filter=".filter-java">Java</li>
+              <li data-filter=".filter-android">Java</li>
             </ul>
           </div>
         </div>
@@ -480,6 +481,42 @@
                 <h4>Book Store</h4>
                 <div class="portfolio-links">
                   <a href="pages/book-store.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/android-list-view/android-list.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>List View</h4>
+                <div class="portfolio-links">
+                  <a href="pages/android-list.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/android-book/android-book.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Book</h4>
+                <div class="portfolio-links">
+                  <a href="pages/android-book.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/android-room-persistance/android-room.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Room Persistance</h4>
+                <div class="portfolio-links">
+                  <a href="pages/android-room.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
