--- a/pages/java-library.html
+++ b/pages/java-library.html
@@ -112,12 +112,12 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
                     alt=""
                   />
                 </div>
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/java-library/slide-7.png"
                     alt=""
                   />
-                </div>
+                </div> -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
