--- a/pages/web-practical-work.html
+++ b/pages/web-practical-work.html
@@ -106,7 +106,7 @@
                     alt=""
                   />
                 </div>
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/web-practical-work/slide-9.png"
                     alt=""
@@ -129,7 +129,7 @@
                     src="../assets/img/portfolio/web-practical-work/slide-12.png"
                     alt=""
                   />
-                </div>
+                </div> -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
