--- a/pages/web-practical-work.html
+++ b/pages/web-practical-work.html
@@ -151,7 +151,7 @@
               </ul>
               <br />
               <h3>Details</h3>
-              <p></p>
+              <p>Projek ini dibuat untuk memenuhi mata kuliah kerja praktik.</p>
             </div>
           </div>
         </div>
