--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-java">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-java">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java-book-store/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -507,7 +507,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-android">
             <div class="portfolio-wrap">
